# lithification

./: .gitignore  Cargo.toml  LICENSE  TODOs  build.sh  default.nix
.direnv/: cache-pre356435.7f9b6e2babf  cache-pre364329.ce8cbe3c01f  drv
client/: Cargo.toml
client/res/: frag.glsl  frag.spv  shader.spv  shader.wgsl  vert.glsl  vert.spv
client/src/: fetch.rs  lib.rs  main.rs  texture.rs
client/src/render/: camera.rs  chunk.rs  mod.rs  model.rs  texture.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs  witx.rs
common/witx/: events.witx
interface/: bindings.rs  event.wit  resources.wit
mods/as_player_movement/: asconfig.json
mods/as_player_movement/assembly/: index.ts
mods/math/: Cargo.toml  bindings.rs  build.sh  math.wit
mods/math/src/: lib.rs
mods/player_movement/: Cargo.toml  asconfig.json  package-lock.json  package.json  test.wasm  test.wat
mods/player_movement/assembly/: common.ts  host.ts  index.ts  math.ts
mods/player_movement/src/: lib.rs
obsolete_renderer/: Cargo.toml
obsolete_renderer/src/: lib.rs  model.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  model.rs  texture.rs
res/: bindings.rs  index.html
src/: event.rs  main.rs  resources.rs  world.rs
src/ecs/: cell.rs  mod.rs
