[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
env_logger = "0.9.0"
js-sys = "0.3"
log = "0.4"
pollster = "0.2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3", features = [ "ProgressEvent", "ErrorEvent" , "MessageEvent" , "FileReader" , "BinaryType" , "Blob", "WebSocket" ] }
winit = "0.26.1"
wgpu = { version = "0.12", features = [] }

[dependencies.renderer]
path = "../renderer"

[dependencies.common]
path = "../common"
