[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.7.3", features = ["derive"] }
image = "0.24"
nalgebra = "0.30"
wasm-bindgen-futures = "0.4"
winit = "0.26"
wgpu = { version = "0.12", features = [] }
tobj = "3.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

